--- a/app/views/home/_header-home.jade
+++ b/app/views/home/_header-home.jade
@@ -1,1 +1,3 @@
-+headerSection('CREATIVE TEMPLATE', 'WELCOME TO MOGO', 'big' )
+.fold
+    +headerSection('CREATIVE TEMPLATE', 'WELCOME TO MOGO', 'big' )
+    .bt LEARN MORE
