--- a/app/views/_common/layout/_header.jade
+++ b/app/views/_common/layout/_header.jade
@@ -1,7 +1,7 @@
 header.main-header
     .container
-        h1
-            a.main-header__logo(href='#', title='MoGo')
+        h1.main-header__logo
+            a(href='#', title='MoGo')
                 img(src='images/mogo-logo.png', alt='MoGo')
 
         nav.main-header__nav
