--- a/app/styles/_common/utils/_variables.scss
+++ b/app/styles/_common/utils/_variables.scss
@@ -1,5 +1,6 @@
 // http://chir.ag/projects/name-that-color
 $COLOR-NEW-YORK-PINK: #d98080;
 $COLOR-SHARA-SAND: #f5e28e;
+$COLOR-WILD-RICE: #ead88d;
 $COLOR-CARLA: #f0ffd1;
 $COLOR-AQUA-ISLAND: #aee0d2;
