--- a/app/views/_common/utils/_mixins.jade
+++ b/app/views/_common/utils/_mixins.jade
@@ -1,5 +1,5 @@
 mixin mainHeaderBtNav(title, href)
-    a(href=href, title='View #{title}')=title
+    a(href=href, title='View #{title}').light=title
 
 mixin mainHeaderBtIcon(title, href, logo)
     a(href=href, title='View #{title}')=logo
