--- a/app/styles/_common/_typography.scss
+++ b/app/styles/_common/_typography.scss
@@ -1,2 +1,19 @@
-// .font-title
-// .font-desc
+body{
+	font-size: $EM-BASE;
+	font-family: $FONT-SERIF;
+	text-align: center;
+	color: $COLOR-BLACK;
+	-webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    letter-spacing: 0.1em;
+}
+a{
+	text-decoration: none;
+}
+p{
+	color: $COLOR-GRAY;
+}
+.light{
+	font-weight: 100;
+}
