--- a/app/styles/_common/layout/_header.scss
+++ b/app/styles/_common/layout/_header.scss
@@ -13,7 +13,35 @@
 .main-header__nav{
 	float: right;
 	a{
-		padding: 0 30px;
+		color: $COLOR-WHITE;
+		margin: 0 24px;
+		padding: 0 3px;
 		float: left;
+		position: relative;
+		&:after{
+			content: '';
+			position: absolute;
+			bottom: 24px;
+			left: 0;
+			width: 100%;
+			height: 3px;
+			background-color: transparent;
+		}
+		&.active{
+			background-color: $COLOR-WILD-RICE;
+		}
+	}
+}
+
+@media (min-width: 768px){
+	.main-header__nav{
+		a{
+			&:hover{
+				color: $COLOR-WILD-RICE;
+				&:after{
+					background-color: $COLOR-WILD-RICE;
+				}
+			}
+		}
 	}
 }
