--- a/app/views/home/_header-home.jade
+++ b/app/views/home/_header-home.jade
@@ -1,4 +1,4 @@
-.fold
+.fold__header.flex-center
     .fold__bg.fold__bg--home
-    +headerSection('CREATIVE TEMPLATE', 'WELCOME TO MOGO', 'big' )
+    +headerSection('Creative Template', 'WELCOME<br>TO MOGO', 'big' )
     .bt LEARN MORE
