--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -2,4 +2,5 @@ extends _common/layout/_index
 
 block body
     include home/_header-home
-    include home/_block-1
+    .fold-content
+        include home/_block-1
