--- a/app/styles/_common/layout/_header.scss
+++ b/app/styles/_common/layout/_header.scss
@@ -1,9 +1,11 @@
 .main-header{
+	width: 100%;
 	height: 90px;
 	line-height: 90px;
-	position: relative;
+	position: absolute;
 	text-align: left;
 	z-index: 1;
+	overflow: hidden;
 }
 .main-header__logo,
 .main-header__nav{
