--- a/app/styles/_common/utils/_bootstrap.scss
+++ b/app/styles/_common/utils/_bootstrap.scss
@@ -31,6 +31,12 @@
   }
 }
 
+@media (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
