--- a/app/views/_common/layout/_index.jade
+++ b/app/views/_common/layout/_index.jade
@@ -13,7 +13,7 @@ html(lang="en")
         
         include _header
 
-        section
+        section.fold
             block body
 
         script.
