--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,6 +18,8 @@
 @import
 	'_common/components/fold',
 	'_common/components/buttons',
+	'_common/components/grid-small',
+	'_common/components/stats',
 	'_common/components/header';
 
 @import
