--- a/app/styles/_common/utils/_variables.scss
+++ b/app/styles/_common/utils/_variables.scss
@@ -8,6 +8,8 @@ $COLOR-SHARA-SAND: #f5e28e;
 $COLOR-WILD-RICE: #ead88d;
 $COLOR-CARLA: #f0ffd1;
 $COLOR-AQUA-ISLAND: #aee0d2;
+$COLOR-CONCRETE: #f2f2f2;
+$COLOR-JAGGED-ICE: #f2f2f2;
 
 $COLOR-BLACK: #363636;
 $COLOR-WHITE: #fff;
