--- a/app/views/home/_block-1.jade
+++ b/app/views/home/_block-1.jade
@@ -1,4 +1,19 @@
-article.section.container
+article.section
 	+headerSection('What we do', 'STORY ABOUT US', '' )
 
-	p.col-sm-10.col-sm-offset-1 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+	p.text-wrapper.container-fluid Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+	.container
+		.row.grid__small
+			+gridSmallLink('SUPER TEAM', 'http://placehold.it/380x250', '#')
+			+gridSmallLink('SUPER TEAM', 'http://placehold.it/380x250', '#')
+			+gridSmallLink('SUPER TEAM', 'http://placehold.it/380x250', '#')
+
+	span.clearfix
+	.row.stats
+		.container
+			+statsCol(42, 'WEB DESIGN PROJECTS')
+			+statsCol(123, 'HAPPY CLIENT')
+			+statsCol(12, 'AWARD WINNER')
+			+statsCol(99, 'CUP OF COFFEE')
+			+statsCol(24, 'MEMBERS')
