--- a/app/styles/_common/utils/_bootstrap.scss
+++ b/app/styles/_common/utils/_bootstrap.scss
@@ -42,10 +42,12 @@
 
 @media (max-width: 1054px) {
   .container {
-    width: 768px;
+    width: 638px;
   }
 }
-
+.top-offset{
+  padding-top: 0 !important;
+}
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
