--- a/app/styles/_common/utils/_variables.scss
+++ b/app/styles/_common/utils/_variables.scss
@@ -10,6 +10,7 @@ $COLOR-CARLA: #f0ffd1;
 $COLOR-AQUA-ISLAND: #aee0d2;
 $COLOR-CONCRETE: #f2f2f2;
 $COLOR-JAGGED-ICE: #f2f2f2;
+$COLOR-ALABASTER: #f8f8f8;
 
 $COLOR-BLACK: #363636;
 $COLOR-WHITE: #fff;
