--- a/app/views/home/_block-2.jade
+++ b/app/views/home/_block-2.jade
@@ -1,7 +1,7 @@
-article.section.top-offset
-	.seccion__devices
-		+headerSection('For all devices', 'UNIQUE DESIGN', '' )
+article.section.seccion__devices.top-offset
+    .seccion__devices__header
+        +headerSection('For all devices', 'UNIQUE DESIGN', '' )
 
-	img.device__ipad(src="../images/ipad.png", width='', height='713', alt='ipad')
-	.device__border
-	img.device__iphone(src='../images/iphone.png', width='275', height='iphone')
+    img.device__ipad(src="../images/ipad.png", width='', height='713', alt='ipad')
+    .device__border
+    img.device__iphone(src='../images/iphone.png', width='275', height='iphone')
