--- a/app/styles/_common/utils/_bootstrap.scss
+++ b/app/styles/_common/utils/_bootstrap.scss
@@ -23,6 +23,14 @@
   margin-left: auto;
   width: 1200px;
 }
+.center{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
 // @media (min-width: 768px) {
 //   .container {
 //     width: 738px;
@@ -42,7 +50,7 @@
 
 @media (max-width: 1054px) {
   .container {
-    width: 638px;
+    width: 738px;
   }
 }
 .top-offset{
