--- a/app/styles/views/_home.scss
+++ b/app/styles/views/_home.scss
@@ -2,14 +2,18 @@
 	background: url(../images/eagle.png) no-repeat scroll center center transparent;
 }
 .seccion__devices{
+	position: relative;
+}
+.seccion__devices__header{
 	padding-top: 95px;
-	height: 755px;
+	height: 850px;
 	background: url(../images/landscape.jpg) no-repeat scroll center center $COLOR-CONCRETE;
 	background-size: cover;
 }
 .device__border{
 	width: 100%;
 	height: 130px;
+	bottom: 0;
     position: absolute;
     background-color: $COLOR-WHITE;
 }
@@ -19,11 +23,30 @@
 	left: 0;
 	right: 0;
 	margin: auto;
-	bottom: -132px;
+	bottom: 0
 
-}
-.device__ipad{
 }
 .device__iphone{
 	right: -475px;
+}
+
+.logos{
+	position: relative;
+	height: 150px;
+	background-color: $COLOR-ALABASTER;
+}
+.logo__col{
+	float: left;
+	width: 20%;
+	height: 150px;
+	text-align: center;
+	position: relative;
+}
+@media (max-width: 1054px) {
+	.logo__col{
+		img{
+			width: 95%;
+			height: auto;
+		}
+	}
 }
