--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -5,3 +5,10 @@ block body
     .fold-content
         include home/_block-1
         include home/_block-2
+        .logos
+            .container
+                +logosCol('title', 'http://placehold.it/150x120')
+                +logosCol('title', 'http://placehold.it/150x120')
+                +logosCol('title', 'http://placehold.it/150x120')
+                +logosCol('title', 'http://placehold.it/150x120')
+                +logosCol('title', 'http://placehold.it/150x120')
