--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,7 +19,9 @@
 	'_common/components/fold',
 	'_common/components/buttons',
 	'_common/components/grid-small',
+	'_common/components/grid-big',
 	'_common/components/stats',
+	'_common/components/logos',
 	'_common/components/header';
 
 @import
