--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -5,10 +5,7 @@ block body
     .fold-content
         include home/_block-1
         include home/_block-2
-        .logos
-            .container
-                +logosCol('title', 'http://placehold.it/150x120')
-                +logosCol('title', 'http://placehold.it/150x120')
-                +logosCol('title', 'http://placehold.it/150x120')
-                +logosCol('title', 'http://placehold.it/150x120')
-                +logosCol('title', 'http://placehold.it/150x120')
+        include home/_logos
+        include home/_block-3
+
+        
