--- a/app/styles/_common/utils/_variables.scss
+++ b/app/styles/_common/utils/_variables.scss
@@ -1,6 +1,5 @@
 $EM-BASE: 14px;
-
-$FONT-SERIF: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$FONT-BASE: 'Roboto', sans-serif;
 
 // http://chir.ag/projects/name-that-color
 $COLOR-NEW-YORK-PINK: #d98080;
