--- a/app/views/home/_header-home.jade
+++ b/app/views/home/_header-home.jade
@@ -1,4 +1,3 @@
-.fold__header.flex-center
-    .fold__bg.fold__bg--home
-    +headerSection('Creative Template', 'WELCOME<br>TO MOGO', 'big' )
-    .bt LEARN MORE
+.fold__bg.fold__bg--home
++headerSection('Creative Template', 'WELCOME<br>TO MOGO', 'big' )
+.bt.bold LEARN MORE
