--- a/app/styles/_common/components/_fold.scss
+++ b/app/styles/_common/components/_fold.scss
@@ -1,25 +1,30 @@
-.fold,
-.fold__header{
-	position: absolute;
-	width: 100%;
+.fold{
 	height: 100%;
+	position: relative;
 }
 .fold__header{
-	overflow: hidden;
-	top: 0;
+	width: 100%;
+	height: 100%;
 	min-height: 500px;
+	position: relative;
+	top: 0;
+	overflow: hidden;
 	@include linear-gradient($COLOR-NEW-YORK-PINK, $COLOR-SHARA-SAND);
+
+	.header,
+	.bt{
+		@include transform(translateY(23px));
+		
+	}
 }
 .fold__bg{
-	position: absolute;
 	width: 100%;
 	height: 100%;
-	opacity: .1;
+	position: absolute;
 	left: 0;
 	top: 0;
+	opacity: .1;
 }
 .fold-content{
-	position: absolute;
 	width: 100%;
-    top: 100%;
 }
