--- a/app/styles/_common/utils/_bootstrap.scss
+++ b/app/styles/_common/utils/_bootstrap.scss
@@ -21,7 +21,8 @@
 .container {
   margin-right: auto;
   margin-left: auto;
-  width: 1200px;
+  padding: 0 15px;
+  max-width: 1200px;
 }
 .center{
   position: absolute;
@@ -42,17 +43,17 @@
 //   }
 // }
 
-@media (max-width: 1230px) {
-  .container {
-    width: 1024px;
-  }
-}
+// @media (max-width: 1230px) {
+//   .container {
+//     width: 1024px;
+//   }
+// }
 
-@media (max-width: 1054px) {
-  .container {
-    width: 738px;
-  }
-}
+// @media (max-width: 1054px) {
+//   .container {
+//     width: 738px;
+//   }
+// }
 .top-offset{
   padding-top: 0 !important;
 }
