--- a/app/styles/_common/utils/_variables.scss
+++ b/app/styles/_common/utils/_variables.scss
@@ -1,5 +1,6 @@
 $EM-BASE: 14px;
-$FONT-BASE: 'Roboto', sans-serif;
+$FONT-BASE: 'Roboto Condensed', sans-serif;
+$FONT-THIN: 'Roboto', sans-serif;
 
 // http://chir.ag/projects/name-that-color
 $COLOR-NEW-YORK-PINK: #d98080;
@@ -14,3 +15,4 @@ $COLOR-ALABASTER: #f8f8f8;
 $COLOR-BLACK: #363636;
 $COLOR-WHITE: #fff;
 $COLOR-GRAY: #989898;
+$COLOR-SILVER: #cccccc;
