--- a/app/styles/_common/_typography.scss
+++ b/app/styles/_common/_typography.scss
@@ -1,8 +1,9 @@
 @mixin fontThin(){
+	font-family: $FONT-THIN;
 	font-weight: 100;
 }
 @mixin fontThinItalic(){
-	font-weight: 100;
+	@include fontThin();
 	font-style: italic;
 }
 
@@ -12,7 +13,7 @@
 
 
 @mixin fontLightItalic(){
-	font-weight: 300;
+	@include fontThin();
 	font-style: italic;
 }
 
@@ -20,9 +21,8 @@
 	font-weight: 400;
 }
 
-
 @mixin fontBold(){
-	font-weight: 900;
+	font-weight: 700;
 }
 
 body{
@@ -34,15 +34,16 @@ body{
 	-webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
-    letter-spacing: 0.1em;
 }
 a{
 	text-decoration: none;
+	color: $COLOR-WHITE;
 }
 p{
 	color: $COLOR-GRAY;
 	font-size: em(15);
 	line-height: 1.5em;
+	letter-spacing: 0.05em;
 }
 .thin{
 	@include fontThin();
