--- a/app/styles/_common/layout/_footer.scss
+++ b/app/styles/_common/layout/_footer.scss
@@ -2,3 +2,8 @@
 	padding-top: 35px;
 	background-color: $COLOR-ALABASTER;
 }
+.main-footer__title{
+	font-size: em(46);
+	color: $COLOR-SILVER;
+	padding-bottom: 20px;
+}
