--- a/app/views/_common/layout/_index.jade
+++ b/app/views/_common/layout/_index.jade
@@ -7,7 +7,7 @@ html(lang="en")
 
         meta(name="description", content="MoGo: Creative Template")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
-        link(href='https://fonts.googleapis.com/css?family=Roboto:100,100italic,400,300italic,900', rel='stylesheet', type='text/css')
+        link(href='https://fonts.googleapis.com/css?family=Roboto:100,100italic|Roboto+Condensed:400,300,700', rel='stylesheet', type='text/css')
         link(rel="stylesheet", type="text/css", href="css/main.css")
     body.full
         
