--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,7 @@
 
 @import
 	'_common/components/fold',
+	'_common/components/form',
 	'_common/components/buttons',
 	'_common/components/grid-small',
 	'_common/components/grid-big',
