--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,5 @@
 // Description: Data structure.
 // Version: 1.0.0
- 
 
 @import
 	'bourbon';
@@ -8,9 +7,7 @@
 @import
 	'_common/vendor/reset',
 	'_common/utils/variables',
-	'_common/typography',
-	'_common/utils/mixins',
-	'_common/utils/bootstrap';
+	'_common/typography';
 
 @import
 	'_common/layout/base';
