--- a/app/styles/_common/layout/_base.scss
+++ b/app/styles/_common/layout/_base.scss
@@ -1,3 +1,59 @@
+.full{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0 15px;
+  max-width: 1200px;
+}
+.center{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.top-offset{
+  padding-top: 0 !important;
+}
+.container-fluid {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.row {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+.clearfix:before,
+.clearfix:after,
+.container:before,
+.container:after,
+.container-fluid:before,
+.container-fluid:after,
+.row:before,
+.row:after {
+  content: " ";
+  display: table;
+}
+.clearfix:after,
+.container:after,
+.container-fluid:after,
+.row:after {
+  clear: both;
+}
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
 .section{
     padding-top: 90px;
     overflow-x: hidden;
