--- a/app/views/_common/layout/_footer.jade
+++ b/app/views/_common/layout/_footer.jade
@@ -1,13 +1,22 @@
 footer.main-footer
     h3.main-footer__title.bold MoGo
+
     .main-footer__wrapper.center-block
-        .main-footer__col.main-footer__col--disclaimer.text-left
+
+        aside.main-footer__col.main-footer__col--disclaimer.text-left
             p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        
         .main-footer__col.main-footer__col--contact
-            .main-footer__social
-            form.form(action='#')
+            ul.main-footer__social.light--italic
+                li Follow Us
+                li: a(href='#', title='Go to ') fa
+                li: a(href='#', title='Go to ') tw
+                li: a(href='#', title='Go to ') in
+                li: a(href='#', title='Go to ') yt
+            form.form.center-block(action='#')
                 input(type='email', name='email', placeholder='Your Email...', required)
                 input.bold(type='submit', value='SUBSCRIBE')
-        .clearfix
-        .main-footer__copyright
-            p.thin &copy; 2016 MoGo free PSD template by Laaqiq
+        
+        span.clearfix
+        aside.main-footer__copyright
+            p.thin &copy; 2016 MoGo free PSD template by <a href='#' title='Go to Laaqiq' target='_blank'>Laaqiq</a>
