--- a/app/views/_common/layout/_footer.jade
+++ b/app/views/_common/layout/_footer.jade
@@ -9,10 +9,10 @@ footer.main-footer
         .main-footer__col.main-footer__col--contact
             ul.main-footer__social.light--italic
                 li Follow Us
-                li: a(href='#', title='Go to ') fa
-                li: a(href='#', title='Go to ') tw
-                li: a(href='#', title='Go to ') in
-                li: a(href='#', title='Go to ') yt
+                li: a(href='#', title='Go to Facebook'): i.fa.fa-facebook
+                li: a(href='#', title='Go to Twitter'): i.fa.fa-twitter
+                li: a(href='#', title='Go to Instagram'): i.fa.fa-instagram
+                li: a(href='#', title='Go to Youtube'): i.fa.fa-youtube
             form.form.center-block(action='#')
                 input(type='email', name='email', placeholder='Your Email...', required)
                 input.bold(type='submit', value='SUBSCRIBE')
