--- a/app/views/_common/layout/_header.jade
+++ b/app/views/_common/layout/_header.jade
@@ -9,3 +9,5 @@ header.main-header
             +mainHeaderBtNav( 'WORK', '#' )
             +mainHeaderBtNav( 'BLOG', '#' )
             +mainHeaderBtNav( 'CONTACT', '#' )
+            a.main-header__b(href='#', title='View car'): i.fa.fa-shopping-cart(aria-hidden="true")
+            a.main-header__b(href='#', title='Search'): i.fa.fa-search(aria-hidden="true")
