--- a/app/views/home/_block-1.jade
+++ b/app/views/home/_block-1.jade
@@ -5,9 +5,9 @@ article.section
 
 	.container
 		.row.grid__small
-			+gridSmallLink('SUPER TEAM', 'http://placehold.it/380x250', '#')
-			+gridSmallLink('SUPER TEAM', 'http://placehold.it/380x250', '#')
-			+gridSmallLink('SUPER TEAM', 'http://placehold.it/380x250', '#')
+			+gridSmallLink('SUPER TEAM', 'http://placehold.it/380x250', '#', 'users')
+			+gridSmallLink('SUPER TEAM', 'http://placehold.it/380x250', '#', 'share-alt')
+			+gridSmallLink('SUPER TEAM', 'http://placehold.it/380x250', '#', 'heart')
 
 	.row.stats
 		.container
