--- a/app/views/home/_block-3.jade
+++ b/app/views/home/_block-3.jade
@@ -1,17 +1,17 @@
 article.section
-	+headerSection('What we do', 'SOME OF OUR WORK', '' )
+    +headerSection('What we do', 'SOME OF OUR WORK', '' )
 
-	p.text-wrapper.container-fluid Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    p.text-wrapper.container-fluid Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
-	.grid__big
-		.grid__big__col
-			+gridBig('CREATIVELY DESIGNED', 'Lorem ipsum dolor sit', 'http://placehold.it/480x390/000000/b1b1b1', '#')
-			+gridBig('CREATIVELY DESIGNED', 'Lorem ipsum dolor sit', 'http://placehold.it/480x390/b1b1b1/000000', '#')
-		.grid__big__col
-			+gridBig('CREATIVELY DESIGNED', 'Lorem ipsum dolor sit', 'http://placehold.it/480x390/b1b1b1/000000', '#')
-			+gridBig('CREATIVELY DESIGNED', 'Lorem ipsum dolor sit', 'http://placehold.it/480x390/000000/b1b1b1', '#')
-		.grid__big__col
-			+gridBig('CREATIVELY DESIGNED', 'Lorem ipsum dolor sit', 'http://placehold.it/480x780/cccccc/ffffff', '#', 'double')
-		.grid__big__col
-			+gridBig('CREATIVELY DESIGNED', 'Lorem ipsum dolor sit', 'http://placehold.it/480x390/000000/b1b1b1', '#')
-			+gridBig('CREATIVELY DESIGNED', 'Lorem ipsum dolor sit', 'http://placehold.it/480x390/b1b1b1/000000', '#')
+    .grid__big
+        .grid__big__col
+            +gridBig('CREATIVELY DESIGNED', 'Lorem ipsum dolor sit', 'http://placehold.it/480x390/000000/b1b1b1', '#', 'picture-o', '')
+            +gridBig('CREATIVELY DESIGNED', 'Lorem ipsum dolor sit', 'http://placehold.it/480x390/b1b1b1/000000', '#', 'picture-o', '')
+        .grid__big__col
+            +gridBig('CREATIVELY DESIGNED', 'Lorem ipsum dolor sit', 'http://placehold.it/480x390/b1b1b1/000000', '#', 'picture-o', '')
+            +gridBig('CREATIVELY DESIGNED', 'Lorem ipsum dolor sit', 'http://placehold.it/480x390/000000/b1b1b1', '#', 'picture-o', '')
+        .grid__big__col
+            +gridBig('CREATIVELY DESIGNED', 'Lorem ipsum dolor sit', 'http://placehold.it/480x780/cccccc/ffffff', '#', 'picture-o', 'double')
+        .grid__big__col
+            +gridBig('CREATIVELY DESIGNED', 'Lorem ipsum dolor sit', 'http://placehold.it/480x390/000000/b1b1b1', '#', 'picture-o', '')
+            +gridBig('CREATIVELY DESIGNED', 'Lorem ipsum dolor sit', 'http://placehold.it/480x390/b1b1b1/000000', '#', 'picture-o', '')
