--- a/app/views/_common/layout/_index.jade
+++ b/app/views/_common/layout/_index.jade
@@ -26,5 +26,5 @@ html(lang="en")
             ga('create', 'UA-73201914-1', 'auto');
             ga('send', 'pageview');
 
-        script(src="js/vendor.js")
-        script(src="js/main.js")
+        //- script(src="js/vendor.js")
+        //- script(src="js/main.js")
