--- a/app/views/_common/layout/_footer.jade
+++ b/app/views/_common/layout/_footer.jade
@@ -19,4 +19,4 @@ footer.main-footer
         
         span.clearfix
         aside.main-footer__copyright
-            p.thin &copy; 2016 MoGo free PSD template by <a href='#' title='Go to Laaqiq' target='_blank'>Laaqiq</a>
+            p.thin &copy; 2016 MoGo free PSD template by <a href='http://freebiesbug.com/psd-freebies/mogo-free-one-page-psd-template/' title='Go to Laaqiq' target='_blank'>Laaqiq</a>
