--- a/app/views/home/_header-home.jade
+++ b/app/views/home/_header-home.jade
@@ -1,3 +1,4 @@
 .fold__bg.fold__bg--home
 +headerSection('Creative Template', 'WELCOME<br>TO MOGO', 'big' )
-.bt.bold LEARN MORE
+.bt.bold
+	span LEARN MORE
