--- a/app/styles/_common/components/_grid-small.scss
+++ b/app/styles/_common/components/_grid-small.scss
@@ -22,32 +22,28 @@
 		left: 0;
 		right: 0;
 		background-color: transparent;
-	}
-	&:hover{
-		&:before{
-			background-color: $COLOR-AQUA-ISLAND;
-		}
-		.grid__small__thumb{
-			@include transform(translateX(-10px) translateY(-10px));
-		}
-		.grid__small__gradient{
-			opacity: .4;
-		}
-		.grid__small__hover{
-			opacity: 1
-		}
+		@include transition(all .25s $ease-out-expo);
 	}
 }
+
+
+.grid__small__gradient,
+.grid__small__hover{
+	opacity: 0;
+}
+
 .grid__small__hover{
 	z-index: 1;
-	opacity: 0;
+	@include transition(all .05s $ease-out-expo);
 }
 .grid__small__icon{
 	padding-bottom: 10px;
-	font-size: em(24)
+	font-size: em(24);
+	@include transform(translateY(-20px));
 }
 .grid__small__title{
-	font-size: em(18)
+	font-size: em(18);
+	@include transform(translateY(20px));
 }
 .grid__small__gradient{
 	top: 0;
@@ -55,7 +51,7 @@
 	right: 0;
 	margin: auto;
 	max-width: 380px;
-	opacity: 0;
+	@include transition(opacity .15s $ease-out-expo);
 	@include linear-gradient($COLOR-NEW-YORK-PINK, $COLOR-SHARA-SAND);
 }
 .grid__small__thumb{
@@ -64,7 +60,31 @@
 	background: no-repeat scroll center center;
 	position: relative;
 	z-index: 1;
+	@include transform(translateX(0) translateY(0));
+	@include transition(all .25s $ease-out-expo);
 }
+@media (min-width: 768px){
+	.grid__small__link{
+		&:hover{
+			&:before{
+				background-color: $COLOR-AQUA-ISLAND;
+			}
+			.grid__small__thumb{
+				@include transform(translateX(-10px) translateY(-10px));
+			}
+			.grid__small__gradient{
+				@include transition(opacity .25s $ease-out-expo);
+				opacity: .4;
+			}
+			.grid__small__hover{
+				@include transition(all .75s $ease-out-expo);
+				@include transform(translateY(0));
+				opacity: 1
+			}
+		}
+	}
+}
+
 @media (max-width: 1230px) {
 	.grid__small__link{
     	width: calc(33.33% - 30px);
