--- a/app/styles/_common/layout/_header.scss
+++ b/app/styles/_common/layout/_header.scss
@@ -29,6 +29,8 @@
 			width: 100%;
 			height: 3px;
 			background-color: transparent;
+			@include transform(translateY(20px));
+			@include transition(all .75s $ease-out-expo);
 		}
 		&.active{
 			background-color: $COLOR-WILD-RICE;
@@ -38,10 +40,15 @@
 .main-header__a{
 	margin: 0 27px;
 	padding: 0 3px;
+	@include transition(color .75s $ease-out-expo);
 	&:last-child{
 		margin-right: 0;
 		padding-right: 0;
 	}
+}
+.main-header__logo a,
+.main-header__b{
+	@include transition(opacity .75s $ease-out-expo);
 }
 .main-header__b{
 	padding: 0 20px;
@@ -54,8 +61,16 @@
 		&:hover{
 			color: $COLOR-WILD-RICE;
 			&:after{
+				@include transform(translateY(0));
 				background-color: $COLOR-WILD-RICE;
 			}
+		}
+	}
+	.main-header__logo a,
+	.main-header__b{
+		&:hover{
+
+			opacity: .6;
 		}
 	}
 }
