--- a/app/views/home/_block-2.jade
+++ b/app/views/home/_block-2.jade
@@ -1,7 +1,7 @@
 article.section.seccion__devices.top-offset
-    .seccion__devices__header
+    .seccion__devices__header( data-distance='[0.01, 0.0]' )
         +headerSection('For all devices', 'UNIQUE DESIGN', '' )
 
-    img.device__ipad(src="../images/ipad.png", width='', height='713', alt='ipad')
+    img.device__ipad(src="../images/ipad.png", width='', height='713', alt='ipad', data-distance='[0.01, 0.02]')
     .device__border
-    img.device__iphone(src='../images/iphone.png', width='275', height='iphone')
+    img.device__iphone(src='../images/iphone.png', width='275', height='iphone', data-distance='[0.03, 0.01]')
