--- a/app/views/home/_header-home.jade
+++ b/app/views/home/_header-home.jade
@@ -1,4 +1,4 @@
-.fold__bg.fold__bg--home
+.fold__bg.fold__bg--home(data-distance='[0.01, 0.01]')
 +headerSection('Creative Template', 'WELCOME<br>TO MOGO', 'big' )
 .bt.bold
 	span LEARN MORE
