--- a/app/styles/_common/layout/_base.scss
+++ b/app/styles/_common/layout/_base.scss
@@ -1,3 +1,11 @@
+body{
+  position: fixed;
+  overflow: hidden;
+}
+.main-wrapper{
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
 .full{
   position: absolute;
   width: 100%;
