--- a/app/views/_common/layout/_index.jade
+++ b/app/views/_common/layout/_index.jade
@@ -11,11 +11,12 @@ html(lang="en")
         link(rel="stylesheet", type="text/css", href="css/main.css")
     body.full
         
-        include _header
+        .main-wrapper.full
+            include _header
 
-        block body
+            block body
 
-        include _footer
+            include _footer
 
         script.
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -26,5 +27,5 @@ html(lang="en")
             ga('create', 'UA-73201914-1', 'auto');
             ga('send', 'pageview');
 
-        //- script(src="js/vendor.js")
-        //- script(src="js/main.js")
+        script(src="js/vendor.js")
+        script(src="js/main.js")
