--- a/app/styles/views/_home.scss
+++ b/app/styles/views/_home.scss
@@ -1,5 +1,5 @@
 .fold__bg--home{
-	background: url(../images/eagle.png) no-repeat scroll center center transparent;
+	background: no-repeat scroll center center transparent;
 }
 .seccion__devices{
 	position: relative;
