--- a/app/views/_common/layout/_index.jade
+++ b/app/views/_common/layout/_index.jade
@@ -17,6 +17,8 @@ html(lang="en")
             block body
 
             include _footer
+        #js-main-loader.main-loader.full
+            #js-main-loader__bar.main-loader__bar.center
 
         script.
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
