--- a/app/styles/_common/components/_header.scss
+++ b/app/styles/_common/components/_header.scss
@@ -17,11 +17,13 @@
 .header__desc{
 	font-size: em(24);
 	padding-bottom: 19px;
+	position: relative;
 }
 
 .header__tit{
 	font-size: em(30);
 	padding-bottom: 43px;
+	position: relative;
 }
 
 .header--big{
