--- a/app/views/_common/layout/_header.jade
+++ b/app/views/_common/layout/_header.jade
@@ -3,7 +3,7 @@ header.main-header
         h1.main-header__logo.bold
             a(href='#', title='MoGo') MoGo
 
-        nav.main-header__nav
+        nav#js-main-header__nav.main-header__nav
             +mainHeaderBtNav( 'ABOUT', '#' )
             +mainHeaderBtNav( 'SERVICE', '#' )
             +mainHeaderBtNav( 'WORK', '#' )
