--- a/app/views/_common/layout/_index.jade
+++ b/app/views/_common/layout/_index.jade
@@ -11,7 +11,7 @@ html(lang="en")
         link(rel="stylesheet", type="text/css", href="css/main.css")
     body.full
         
-        .main-wrapper.full
+        #js-main-wrapper.main-wrapper.full
             include _header
 
             block body
